fix i found on stack overflow

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body::before {
 }
 
 img {
-  max-height: auto;
-  max-width: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
